finish main page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -183,7 +183,7 @@
                     <div class="news-content__wrap">
                         <div class="content-general">
                             <div class="content-general__item">
-                                <div class="content-general__picture">
+                                <div class="content-general__picture ibg ibg--cover">
                                     <img src="../assets/img/images/base-general.jpg" alt="">
                                 </div>
                                 <div class="content-card__wrap">
@@ -229,7 +229,7 @@
                                 </div>
                                 <div class="news-button">
                                     <a class="news-button__link" href="#">
-                                        <span class="news-button__link--text">Перейти к новостям</span>
+                                        <span class="news-button__link--text">Перейти к<br> новостям</span>
                                         <svg class="news-button__svg">
                                             <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-next"></use>
                                         </svg>
@@ -238,7 +238,7 @@
                                 </div>
                             </div>
                             <div class="content-simple">
-                                <div class="content-simple__picture">
+                                <div class="content-simple__picture ibg ibg--cover">
                                     <img src="../assets/img/images/structure.jpg" alt="">
                                 </div>
                                 <div class="content-simple__item">
@@ -257,6 +257,40 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="internet-banking">
+                <div class="internet-banking__wrap">
+                    <div class="banking-info info">
+                        <div class="info-title__wrap">
+                            <h4 class="info-title m--b-25">«Интернет-банк»
+                                для корпоративных клиентов</h4>
+                        </div>
+                        <div class="info-text__wrap m--b-25">
+                            <p class="info-text__subtitle">МФК в твоем телефоне</p>
+                            <p class="info-text">Возможность дистанционного банковского обслуживания в режиме реального
+                                времени</p>
+                        </div>
+                        <div class="info-button__wrap m--b-25">
+                            <a class="info-button" href="#">Больше о услуге</a>
+                        </div>
+                        <div class="info-store__wrap m--b-25">
+                            <div class="info-store__item info-store__item--margin">
+                                <img src="../assets/img/icons/store.png" alt="">
+                            </div>
+                            <div class="info-store__item m--l-35">
+                                <img src="../assets/img/icons/playmarket.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="banking-visual visual">
+                        <div class="visual-phone ">
+                            <img src="../assets/img/icons/mobilephone.png" alt="">
+                        </div>
+                        <div class="visual-art">
+                            <img src="../assets/img/icons/art.png" style="height: 100%">
                         </div>
                     </div>
                 </div>
