--- a/src/html/contributions.html
+++ b/src/html/contributions.html
@@ -43,20 +43,30 @@
                     <!--Main Content -->
                     <div class="operations__item">
                         <h2 class="second__title-settlement-service contributions_title">Вклады</h2>
-                        <div class="contributions-filters filters m--b-25 fx fx-wr--w fx-ai--c fx-jc--s md-fx-jc--sa xsm-fx-jc--c" data-filtered-items-container-id="filtered-items" data-auto-update="false" >
-                            <div class="filter fx p--10 md-fx-od--3 md-fx-el--50 xsm-fx-el--100" data-filter-type="boolean" data-truthfull-selector="input:checked" data-filter-name='condition1'>
+                        <div class="contributions-filters filters m--b-25 fx fx-wr--w fx-ai--c fx-jc--s md-fx-jc--sa xsm-fx-jc--c"
+                            data-filtered-items-container-id="filtered-items" data-auto-update="false">
+                            <div class="filter fx p--10 md-fx-od--3 md-fx-el--50 xsm-fx-el--100"
+                                data-filter-type="boolean" data-truthfull-selector="input:checked"
+                                data-filter-name='condition1'>
                                 <input class="checkbox filter-trigger" type="checkbox" name="filter" id="vostrebovanie">
                                 <label class="filter-trigger" for="vostrebovanie">Досрочное полное востребование</label>
                             </div>
-                            <div class="filter fx p--10 md-fx-od--3 md-fx-el--50 xsm-fx-el--100" data-filter-type="boolean" data-truthfull-selector="input:checked" data-filter-name='condition2'>
+                            <div class="filter fx p--10 md-fx-od--3 md-fx-el--50 xsm-fx-el--100"
+                                data-filter-type="boolean" data-truthfull-selector="input:checked"
+                                data-filter-name='condition2'>
                                 <input class="checkbox filter-trigger" type="checkbox" name="filter" id="vznos">
                                 <label class="filter-trigger" for="vznos">Дополнительные взносы</label>
                             </div>
-                            <div class="filter fx p--10 md-fx-od--3 md-fx-el--50 xsm-fx-el--100" data-filter-type="boolean" data-truthfull-selector="input:checked" data-filter-name='condition3'>
-                                <input class="checkbox filter-trigger" type="checkbox" name="filter" id="partvostrebovanie">
+                            <div class="filter fx p--10 md-fx-od--3 md-fx-el--50 xsm-fx-el--100"
+                                data-filter-type="boolean" data-truthfull-selector="input:checked"
+                                data-filter-name='condition3'>
+                                <input class="checkbox filter-trigger" type="checkbox" name="filter"
+                                    id="partvostrebovanie">
                                 <label class="filter-trigger" for="partvostrebovanie">Частичное востребование</label>
                             </div>
-                            <div class="filter fx-el--40 fx-el--g1 p--10 md-fx-od--0 xsm-fx-el--100" data-filter-type="number" data-filter-name='price' data-scale="breakpoints" data-label-selector=".filter-label" data-label-preset="price" data-breakpoints='
+                            <div class="filter fx-el--40 fx-el--g1 p--10 md-fx-od--0 xsm-fx-el--100"
+                                data-filter-type="number" data-filter-name='price' data-scale="breakpoints"
+                                data-label-selector=".filter-label" data-label-preset="price" data-breakpoints='
                             {
                                 "breakpoints":[
                                     {
@@ -75,9 +85,12 @@
                             }'>
                                 <span>Хочу вложить </span>
                                 <span class="filter-label text--700 text--M text--dark-gray">1</span>
-                                <input id="days-range" type="range" class="filter-trigger m--t-10" name="days" min="1" max="28" value="1" step="1">
+                                <input id="days-range" type="range" class="filter-trigger m--t-10" name="days" min="1"
+                                    max="28" value="1" step="1">
                             </div>
-                            <div class="filter fx-el--30 fx-el--g1 p--10 md-fx-od--1 xsm-fx-el--100" data-filter-type="number" data-filter-name='time' data-scale="breakpoints" data-label-selector=".filter-label" data-label-preset="time" data-breakpoints='
+                            <div class="filter fx-el--30 fx-el--g1 p--10 md-fx-od--1 xsm-fx-el--100"
+                                data-filter-type="number" data-filter-name='time' data-scale="breakpoints"
+                                data-label-selector=".filter-label" data-label-preset="time" data-breakpoints='
                             {
                                 "breakpoints":[
                                     {
@@ -102,14 +115,15 @@
                                     }
                                 ]
                             }'>
-                                <span>Срок: </span> 
+                                <span>Срок: </span>
                                 <span class="filter-label text--700 text--M text--dark-gray">1</span>
-                                <input id="days-range" type="range" class="filter-trigger m--t-10" name="days" min="1" max="70" value="1" step="1">
+                                <input id="days-range" type="range" class="filter-trigger m--t-10" name="days" min="1"
+                                    max="70" value="1" step="1">
                             </div>
                             <div class="md-fx-el--50 md-fx-od--3 fx fx-jc--c xsm-fx-el--100">
                                 <button class="btn btn-filter filter-apply-button  p--10 xsm-fx-el--100">
                                     Применить
-                                </button>   
+                                </button>
                             </div>
                         </div>
                         <!-- <div class="contributions__filter">
@@ -200,15 +214,15 @@
                                         <p class="contributions-type__text">
                                             Частичное снятие
                                         </p>
-                                        <img class="contributions-type-picture" src="../assets/img/images/close.png" width="14"
-                                            height="14" />
+                                        <img class="contributions-type-picture" src="../assets/img/images/close.png"
+                                            width="14" height="14" />
                                     </div>
                                     <div class="contributions-type__comtainer" id="checks2">
                                         <p class="contributions-type__text">
                                             Возможность пополнения
                                         </p>
-                                        <img class="contributions-type-picture" src="../assets/img/images/close.png" width="14"
-                                            height="14" />
+                                        <img class="contributions-type-picture" src="../assets/img/images/close.png"
+                                            width="14" height="14" />
                                     </div>
                                     <div class="contributions-type__comtainer" id="checks3">
                                         <p class="contributions-type__text">
@@ -288,7 +302,8 @@
                             </div>
                             <div class="contributions-type">
                                 <div class="contributions-type__picture">
-                                    <img class="contributions__picture" src="../assets/img/images/maximum.jpg" alt="maximum">
+                                    <img class="contributions__picture" src="../assets/img/images/maximum.jpg"
+                                        alt="maximum">
                                 </div>
                                 <div class="contributions-type__content">
                                     <div class="maximum-wrap" id="title">
@@ -298,17 +313,20 @@
                                         <ul class="contributions-type__list">
                                             <li class="contributions-type__item">
                                                 <svg class="contributions-type__symbhol">
-                                                    <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-ruble"></use>
+                                                    <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-ruble">
+                                                    </use>
                                                 </svg>
                                             </li>
                                             <li class="contributions-type__item">
                                                 <svg class="contributions-type__symbhol">
-                                                    <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-dollar"></use>
+                                                    <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-dollar">
+                                                    </use>
                                                 </svg>
                                             </li>
                                             <li class="contributions-type__item">
                                                 <svg class="contributions-type__symbhol">
-                                                    <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-euro"></use>
+                                                    <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-euro">
+                                                    </use>
                                                 </svg>
                                             </li>
                                         </ul>
@@ -340,22 +358,22 @@
                                         <p class="contributions-type__text">
                                             Частичное снятие
                                         </p>
-                                        <img class="contributions-type-picture" src="../assets/img/images/close.png" width="14"
-                                            height="14" />
+                                        <img class="contributions-type-picture" src="../assets/img/images/close.png"
+                                            width="14" height="14" />
                                     </div>
                                     <div class="contributions-type__comtainer" id="checks2">
                                         <p class="contributions-type__text">
                                             Возможность пополнения
                                         </p>
-                                        <img class="contributions-type-picture" src="../assets/img/images/close.png" width="14"
-                                            height="14" />
+                                        <img class="contributions-type-picture" src="../assets/img/images/close.png"
+                                            width="14" height="14" />
                                     </div>
                                     <div class="contributions-type__comtainer" id="checks3">
                                         <p class="contributions-type__text">
                                             Ежемесячная выплата
                                         </p>
-                                        <img class="contributions-type-picture" src="../assets/img/images/close.png" width="14"
-                                            height="14" />
+                                        <img class="contributions-type-picture" src="../assets/img/images/close.png"
+                                            width="14" height="14" />
                                     </div>
                                     <div class="contributions-type__comtainer" id="btn1">
                                         <button class="btn btn-contributions">Получить консультацию</button>
@@ -401,22 +419,22 @@
                                         <p class="contributions-type__text">
                                             Частичное снятие
                                         </p>
-                                        <img class="contributions-type-picture" src="../assets/img/images/close.png" width="14"
-                                            height="14" />
+                                        <img class="contributions-type-picture" src="../assets/img/images/close.png"
+                                            width="14" height="14" />
                                     </div>
                                     <div class="contributions-type__comtainer" id="checks2">
                                         <p class="contributions-type__text">
                                             Возможность пополнения
                                         </p>
-                                        <img class="contributions-type-picture" src="../assets/img/images/close.png" width="14"
-                                            height="14" />
+                                        <img class="contributions-type-picture" src="../assets/img/images/close.png"
+                                            width="14" height="14" />
                                     </div>
                                     <div class="contributions-type__comtainer" id="checks3">
                                         <p class="contributions-type__text">
                                             Ежемесячная выплата
                                         </p>
-                                        <img class="contributions-type-picture" src="../assets/img/images/close.png" width="14"
-                                            height="14" />
+                                        <img class="contributions-type-picture" src="../assets/img/images/close.png"
+                                            width="14" height="14" />
                                     </div>
                                     <div class="contributions-type__comtainer" id="btn1">
                                         <button class="btn btn-contributions">Получить консультацию</button>
@@ -425,9 +443,9 @@
                                         <button class="btn btn-contributions no-active">Подробнее о вкладе</button>
                                     </div>
                                 </div>
-                            </div>    
+                            </div>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
