Add page investmentoptimal

--- a/src/html/contributions.html
+++ b/src/html/contributions.html
@@ -179,7 +179,7 @@
                         </div> -->
                         <div id="filtered-items">
                             <div class="contributions-type">
-                                <div class="contributions-type__picture">
+                                <div class="contributions-type__picture ibg ibg--cover">
                                     <img class="contributions__picture" src="../assets/img/images/optimal.jpg"
                                         alt="father and daughter">
                                 </div>
@@ -235,12 +235,13 @@
                                         <button class="btn btn-contributions">Получить консультацию</button>
                                     </div>
                                     <div class="contributions-type__comtainer" id="btn2">
-                                        <button class="btn btn-contributions no-active">Подробнее о вкладе</button>
+                                        <a href="./investmentoptimal.html"
+                                            class="btn btn-contributions no-active">Подробнее о вкладе</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="contributions-type">
-                                <div class="contributions-type__picture">
+                                <div class="contributions-type__picture ibg ibg--cover">
                                     <img class="contributions__picture" src="../assets/img/images/comfortable.jpg"
                                         alt="comfortable">
                                 </div>
@@ -301,7 +302,7 @@
                                 </div>
                             </div>
                             <div class="contributions-type">
-                                <div class="contributions-type__picture">
+                                <div class="contributions-type__picture ibg ibg--cover">
                                     <img class="contributions__picture" src="../assets/img/images/maximum.jpg"
                                         alt="maximum">
                                 </div>
@@ -383,8 +384,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="contributions-type">
-                                <div class="contributions-type__picture">
+                            <div class="contributions-type ">
+                                <div class="contributions-type__picture ibg ibg--cover">
                                     <img class="contributions__picture" src="../assets/img/images/advantageous.jpg"
                                         alt="father and daughter">
                                 </div>
