--- a/src/html/investmentoptimal.html
+++ b/src/html/investmentoptimal.html
@@ -44,26 +44,29 @@
                     <!--Main Content -->
                     <div class="investment-card__wrapper">
                         <div class="investment-card__banner">
-                            <div class="banner__description">
-                                <div class="banner__return">
-                                    <div class="banner__flow">
+                            <div class="banner__return">
 
+                                <div class="banner__about">
+                                    <div class="banner__subtitle">
+                                        <div class="banner__arrow">
+                                            <svg width="14" height="24" viewBox="0 0 14 24" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M13 23L2 12L13 1" stroke="white" stroke-width="2"
+                                                    stroke-linecap="round" />
+                                            </svg>
+                                        </div>
+                                        <a href="./contributions.html">Все вклады</a>
                                     </div>
-                                    <div class="banner__about">
-                                        <div class="banner__subtitle">
-                                            <p>ВСЕ ВКЛАДЫ</p>
-                                        </div>
-                                        <div class="banner__title">
-                                            <h2>Вклад Оптимальный</h2>
-                                        </div>
-                                        <div class="banner__button__wrap">
-                                            <button>Получить консультацию</button>
-                                        </div>
+                                    <div class="banner__title">
+                                        <h2>Вклад Оптимальный</h2>
+                                    </div>
+                                    <div class="banner__button__wrap">
+                                        <button class="banner__button">Получить консультацию</button>
                                     </div>
                                 </div>
                             </div>
-                            <div class="banner__picture">
-                                <img src="../assets/img/images/optimal.jpg" alt="">
+                            <div class="banner__picture__wrap ibg ibg--cover">
+                                <img class="banner__picture" src="../assets/img/images/optimal.jpg" alt="">
                             </div>
                         </div>
                         <div class="investment-card__details">
@@ -123,26 +126,26 @@
                             </div>
                             <div class="details-check">
                                 <div class="check-item">
-                                    <div class="check-title">
-                                        <p>Частичное снятие</p>
+                                    <div class="check-title__wrap">
+                                        <p class="check-title">Частичное снятие</p>
                                     </div>
                                     <div class="check-img"><img src="../assets/img/images/close.png" alt=""></div>
                                 </div>
                                 <div class="check-item">
-                                    <div class="check-title">
-                                        <p>Возможность пополнения</p>
+                                    <div class="check-title__wrap">
+                                        <p class="check-title">Возможность пополнения</p>
                                     </div>
                                     <div class="check-img"><img src="../assets/img/images/close.png" alt=""></div>
                                 </div>
                                 <div class="check-item">
-                                    <div class="check-title">
-                                        <p>Ежемесячная выплата</p>
+                                    <div class="check-title__wrap">
+                                        <p class="check-title">Ежемесячная выплата</p>
                                     </div>
                                     <div class="check-img"><img src="../assets/img/images/Accept.png" alt=""></div>
                                 </div>
                                 <div class="check-item">
-                                    <div class="check-title">
-                                        <p>Капитализация</p>
+                                    <div class="check-title__wrap">
+                                        <p class="check-title">Капитализация</p>
                                     </div>
                                     <div class="check-img"><img src="../assets/img/images/close.png" alt=""></div>
                                 </div>
@@ -151,44 +154,62 @@
                         <div class="investment-card__description">
                             <div class="description-wrap">
                                 <div class="description-list">
-                                    <ul class="list-title">Валюта вклада Оптимальный:
-                                        <li class="list-item">рубли</li>
+                                    <ul class="list-text--title list-text">Валюта вклада Оптимальный:
+                                        <li class="list-item list-text">рубли</li>
                                     </ul>
                                 </div>
                                 <div class="description-list">
-                                    <ul class="list-title">Срок вклада Оптимальный:
-                                        <li class="list-item">6 месяцев, 12 месяцев</li>
+                                    <ul class="list-text--title list-text">Срок вклада Оптимальный:
+                                        <li class="list-item list-text">6 месяцев, 12 месяцев</li>
                                     </ul>
                                 </div>
                                 <div class="description-list">
-                                    <ul class="list-title">Режим работы вклада Оптимальный:
-                                        <li class="list-item">минимальная сумма вклада 100 000,00 рублей;</li>
-                                        <li class="list-item">максимальная сумма вклада - 2 000 000,00 рублей;</li>
-                                        <li class="list-item">дополнительные взносы во вклад допускаются первые 3
+                                    <ul class="list-text--title list-text">Режим работы вклада Оптимальный:
+                                        <li class="list-item list-text">
+                                            минимальная сумма вклада 100 000,00 рублей;
+                                        </li>
+                                        <li class="list-item list-text">
+                                            максимальная сумма вклада - 2 000 000,00 рублей;
+                                        </li>
+                                        <li class="list-item list-text">
+                                            дополнительные взносы во вклад допускаются первые 3
                                             рабочих дня с даты заключения договора/с даты пролонгации вклада,
                                             дополнительные взносы во вклад минимальной суммой не ограничиваются и
-                                            присоединяются к сумме вклада;</li>
-                                        <li class="list-item">выдача части суммы вклада в течение срока вклада не
-                                            предусмотрена;</li>
-                                        <li class="list-item">при досрочном востребовании суммы вклада/части суммы
+                                            присоединяются к сумме вклада;
+                                        </li>
+                                        <li class="list-item list-text">
+                                            выдача части суммы вклада в течение срока вклада не
+                                            предусмотрена;
+                                        </li>
+                                        <li class="list-item list-text">
+                                            при досрочном востребовании суммы вклада/части суммы
                                             вклада либо ее списании по иным основаниям проценты на сумму вклада
                                             начисляются и выплачиваются по ставке, выплачиваемой Банком по вкладу до
-                                            востребования</li>
-                                        <li class="list-item">пролонгация вклада предусмотрена;</li>
-                                        <li class="list-item">условием открытия вклада является отсутствие действующего
-                                            вклада Оптимальный.</li>
+                                            востребования
+                                        </li>
+                                        <li class="list-item list-text">
+                                            пролонгация вклада предусмотрена;
+                                        </li>
+                                        <li class="list-item list-text">
+                                            условием открытия вклада является отсутствие действующего
+                                            вклада Оптимальный.
+                                        </li>
                                     </ul>
                                 </div>
                                 <div class="description-list">
-                                    <ul class="list-title">Проценты по вкладу Оптимальный:
-                                        <li class="list-item">процентная ставка устанавливается на дату открытия вклада,
+                                    <ul class="list-text--title list-text">Проценты по вкладу Оптимальный:
+                                        <li class="list-item list-text">
+                                            процентная ставка устанавливается на дату открытия вклада,
                                             является фиксированной и не подлежит изменению в течение
                                             всего срока
-                                            вклада;</li>
-                                        <li class="list-item">проценты выплачиваются ежемесячно и в конце срока вклада
+                                            вклада;
+                                        </li>
+                                        <li class="list-item list-text">
+                                            проценты выплачиваются ежемесячно и в конце срока вклада
                                             путем зачисления на текущий счет Клиента, открытый в Банке в
                                             валюте
-                                            вклада</li>
+                                            вклада
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
