Fixed utils and added news

--- a/src/html/inc/header.html
+++ b/src/html/inc/header.html
@@ -86,7 +86,7 @@
 							<a href="#">Банковская группа</a>
 						</div>
 						<div class="header-menu__top-menu-item">
-							<a href="#">Новости</a>
+							<a href="news.html">Новости</a>
 						</div>
 						<div class="header-menu__top-menu-item">
 							<a href="#">Отделения/Банкоматы</a>
