--- a/src/html/single-card-vip.html
+++ b/src/html/single-card-vip.html
@@ -14,7 +14,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="container def-text-wrapper">
+<!-- 		<section class="container def-text-wrapper">
 			<h2>Text</h2>
 			<h3>Text</h3>
 			<h4>Text</h4>
@@ -54,8 +54,8 @@
 					</tr>
 				</tbody>
 			</table>
-		</section>
-		<div class="modal-trigger" data-modal-id="modal" data-modal-title="Видео о проекте">trigger</div>
+		</section> -->
+		<!-- <div class="modal-trigger" data-modal-id="modal" data-modal-title="Видео о проекте">trigger</div>
 		<div class="def-modal modal modal-bg" id="modal">
 			<div class="def-modal__outer-container">
 				<div class="def-modal__inner-container def-modal__inner-container--75">
@@ -115,7 +115,7 @@
 					</div>
 				</div>	
 			</div>
-		</div>
+		</div> -->
 		<section>
 			<div class="container">
 				<div class="card-details m--t-75 m--b-75">
