Fixed single-investment page

--- a/src/html/investmentoptimal.html
+++ b/src/html/investmentoptimal.html
@@ -58,7 +58,7 @@
                                         <a href="./contributions.html">Все вклады</a>
                                     </div>
                                     <div class="banner__title">
-                                        <h2>Вклад Оптимальный</h2>
+                                        <span>Вклад Оптимальный</span>
                                     </div>
                                     <div class="banner__button__wrap">
                                         <button class="banner__button">Получить консультацию</button>
@@ -72,53 +72,53 @@
                         <div class="investment-card__details">
                             <div class="details-data">
                                 <div class="data-item">
-                                    <div class="data-subtitle">
+                                    <div class="data-subtitle text--400 text--gray text--M">
                                         <p>Срок вклада</p>
                                     </div>
                                     <div class="data-title__wrap">
-                                        <div class="data-title">
+                                        <div class="data-title text--700 text--XL text--blue">
                                             <span> 6 месяцев</span>
                                         </div>
-                                        <div class="data-title">
+                                        <div class="data-title text--700 text--XL text--blue">
                                             <span>12 месяцев</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="data-item">
-                                    <div class="data-subtitle">
+                                    <div class="data-subtitle text--400 text--gray text--M">
                                         <p>Ставка</p>
                                     </div>
                                     <div class="data-title__wrap">
-                                        <div class="data-title">
+                                        <div class="data-title text--700 text--XL text--blue">
                                             <span>5.6 %</span>
                                         </div>
-                                        <div class="data-title">
+                                        <div class="data-title text--700 text--XL text--blue">
                                             <span>8.9 %</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="data-item">
-                                    <div class="data-subtitle">
+                                    <div class="data-subtitle text--400 text--gray text--M">
                                         <p>Минимальный взнос</p>
                                     </div>
                                     <div class="data-title__wrap">
-                                        <div class="data-title">
+                                        <div class="data-title text--700 text--XL text--blue">
                                             <span>100 000 руб.</span>
                                         </div>
-                                        <div class="data-title">
+                                        <div class="data-title text--700 text--XL text--blue">
                                             <span>100 000 руб.</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="data-item">
-                                    <div class="data-subtitle">
+                                    <div class="data-subtitle text--400 text--gray text--M">
                                         <p>Максимальный взнос</p>
                                     </div>
                                     <div class="data-title__wrap">
-                                        <div class="data-title">
+                                        <div class="data-title text--700 text--XL text--blue">
                                             <span>2 000 000 руб.</span>
                                         </div>
-                                        <div class="data-title">
+                                        <div class="data-title text--700 text--XL text--blue">
                                             <span>2 000 000 руб.</span>
                                         </div>
                                     </div>
