adjusted distance services

--- a/src/html/distance-services.html
+++ b/src/html/distance-services.html
@@ -98,8 +98,8 @@
 								<p class="service-description">
 									Приложение доступно для версии iOS 7.0 и выше
 								</p>
-								<a href="#" class="service__link-appstore">
-									<img src="../assets/img/images/appstore.png" alt="appstore" class="appstore__picture">
+								<a href="#" class="service__link-playstore">
+									<img src="../assets/img/images/appstore.png" alt="appstore" class="playstore__picture">
 								</a>
 								<a href="#" class="service__link-playstore">
 									<img src="../assets/img/images/google_play.png" alt="playstore" class="playstore__picture">
