Adjusted news image

--- a/src/html/news.html
+++ b/src/html/news.html
@@ -16,8 +16,8 @@
 			</div>
 			<div class="page">
 				<div class="page__content basic-page">
-					<div class="default-card news-card fx xsm-fx-d--c m--b-45 fx-g--15">
-						<div class="news-card__image ibg ibg--cover fx-el--33 fx-el--s0 bdrs--5">
+					<div class="default-card news-card fx xsm-fx-d--c m--b-45 fx-g--15 fx-ai--c">
+						<div class="news-card__image ibg ibg--cover fx-el--33 fx-el--s0 bdrs--5 ratio-w" data-ratio-multiplier="1">
 							<img src="../assets/img/images/comfortable.jpg" alt="">
 						</div>
 						<div class="news-card__text">
@@ -33,8 +33,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="default-card news-card fx fx-d--r-rev xsm-fx-d--c m--b-45 fx-g--15">
-						<div class="news-card__image ibg ibg--cover fx-el--33 fx-el--s0 bdrs--5">
+					<div class="default-card news-card fx fx-d--r-rev xsm-fx-d--c m--b-45 fx-g--15 fx-ai--c">
+						<div class="news-card__image ibg ibg--cover fx-el--33 fx-el--s0 bdrs--5 ratio-w" data-ratio-multiplier="1">
 							<img src="../assets/img/images/comfortable.jpg" alt="">
 						</div>
 						<div class="news-card__text">
