Minor changes + reCaptcha

--- a/src/html/accountopen.html
+++ b/src/html/accountopen.html
@@ -99,6 +99,58 @@
 						</div>
 					</div>
 					<div class="default-card m--b-35">
+						<form class="validated-form form p--x-25 xsm-p--0" action="">
+							<div class="fx fx-wr--w fx-jc--sb m--t-25 m--b-25 text--400 text--dark-gray text--M">
+								<div class="fx-el--100 p--5 m--b-25 validated-form-input form__input" data-validation-type="regex" data-validation-regex=".{1,}">
+									<div class="fx-el--100">
+										<input placeholder="Наименование организации" class="input input--underscore  input--placeholder-dark" type="text">
+									</div>
+									<div class="form__input-invalid-message"><span>Введите имя</span></div>	
+								</div>
+								<div class="fx-el--45  sm-fx-el--100 p--5 fx fx-wr--w m--b-25 validated-form-input form__input" data-validation-type="regex" data-validation-regex=".{1,}">
+									<div class="fx-el--100">
+										<input placeholder="ИНН" class="input input--underscore input--placeholder-dark" type="text">
+									</div>
+									<div class="form__input-invalid-message"><span>Введите имя</span></div>	
+								</div>
+								<div class="fx-el--45 sm-fx-el--100 p--5 fx fx-wr--w m--b-25 validated-form-input form__input" data-validation-type="regex" data-validation-regex=".{1,}">
+									<div class="fx-el--100">
+										<input placeholder="Контактное лицо" class="input input--underscore input--placeholder-dark" type="text">
+									</div>
+									<div class="form__input-invalid-message"><span>Введите имя</span></div>	
+								</div>
+								<div class="fx-el--45  sm-fx-el--100 p--5 fx fx-wr--w m--b-25 validated-form-input form__input" data-validation-type="regex" data-validation-regex="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$">
+									<div class="fx-el--100">
+										<input placeholder="Электронная почта" class="input input--underscore input--placeholder-dark" type="text">
+									</div>
+									<div class="form__input-invalid-message"><span>Введите имя</span></div>	
+								</div>
+								<div class="fx-el--45 sm-fx-el--100 p--5 fx fx-wr--w  m--b-25 validated-form-input form__input" data-validation-type="regex" data-validation-regex="^(?:(?:\+|0{0,2})91(\s*[\ -]\s*)?|[0]?)?[456789]\d{9}|(\d[ -]?){10}\d$">
+									<div class="fx-el--100">
+										<input placeholder="Контактный телефон" class="input input--underscore input--placeholder-dark" type="text">
+									</div>
+									<div class="form__input-invalid-message"><span>Введите имя</span></div>	
+								</div>
+							</div>
+							<div class="fx p--5 md-fx-d--c">
+								<div class="fx fx-ai--c md-m--b-25 validated-form-input form__input m--r-35 sm-m--r-0" data-validation-type="css-selector" data-validation-selector=":has(input:checked)">
+									<div class="">
+										<input type="checkbox" class="m--r-15">
+									</div>
+									<div class="text--gray text--400 text--XS">
+										<span>Я согласен с условиями использования банком моих персональных данных для обработки данного обращения</span>
+									</div>
+									<div class="form__input-invalid-message form__input-invalid-message--top-right">
+										<span>*</span>
+									</div>
+								</div>
+								<div class="fx fx-jc--c fx-ai--c">
+									<button class="btn" type="submit">Отправить</button>
+								</div>
+							</div>
+						</form>
+					</div>
+					<div class="default-card m--b-35">
 						<div class="operations__documentation-nav">
 							<div type="menu__toggle" id="operations__docs" class="operations__docs">
 								<div>
