--- a/src/html/index.html
+++ b/src/html/index.html
@@ -187,13 +187,13 @@
 								</div>
 							</div>
 							<div class="def-modal__content-wrapper def-modal-class-name modal-content-wrapper">
-								<form class="validated-form form p--x-25 xsm-p--0" action="" data-submit-button-selector='button'>
-									<input class="card-number" type="hidden" value="">
+								<form class="validated-form form p--x-25 xsm-p--0" action="">
 									<div class="fx fx-wr--w fx-jc--sb m--t-25 m--b-25">
-										<div class="fx-el--45  sm-fx-el--100 p--5 fx fx-wr--w text--400 text--gray text--M m--b-25">
+										<div class="fx-el--45  sm-fx-el--100 p--5 fx fx-wr--w text--400 text--gray text--M m--b-25 validated-form-input form__input" data-validation-type="regex" data-validation-regex=".{1,}">
 											<div class="fx-el--100">
 												<input placeholder="Имя" class="input input--underscore" type="text">
 											</div>
+											<div class="form__input-invalid-message"><span>Введите имя</span></div>	
 										</div>
 										<div class="fx-el--45 sm-fx-el--100 p--5 fx fx-wr--w text--400 text--gray text--M m--b-25">
 											<div class="fx-el--100">
@@ -202,41 +202,50 @@
 										</div>
 										<div class="fx-el--100  text--400 text--gray text--M m--b-25">
 											<div class="fx-el--100 text--gray text--400 text--M window-selector">
-												<div class="p--5">
-													<select class="select select--underscore validated-form-input" data-valid-selector=":not(:has(option:selected[value='']))" name="" value="">
+												<div class="p--5 validated-form-input form__input" data-validation-type="regex" data-validation-regex=".{1,}">
+													<select class="select select--underscore" name="" value="">
 														<option value="" disabled selected hidden>Вид связи</option>
 														<option value="phone">Телефон</option>
 														<option value="whatsapp">Whatsapp</option>
 														<option value="telegram">Телеграм</option>
 														<option value="email">Email</option>
-													</select>	
+													</select>
+													<div class="form__input-invalid-message"><span>Выберете способ связи</span></div>	
 												</div>
-												<div class="select-option-window p--5 m--t-15 validated-form-input" data-valid-selector=".hidden, :not(:has(input:placeholder-shown))" data-option-value="phone">
+												<div class="select-option-window p--5 m--t-15 validated-form-input form__input" data-validation-type="regex" data-validation-regex="^(?:(?:\+|0{0,2})91(\s*[\ -]\s*)?|[0]?)?[456789]\d{9}|(\d[ -]?){10}\d$" data-option-value="phone">
 													<input placeholder="Телефон" class="input input--underscore" type="tel">
+													<div class="form__input-invalid-message"><span>Введите действительный телефонный номер</span></div>
 												</div>
-												<div class="select-option-window p--5 m--t-15 validated-form-input" data-valid-selector=".hidden, :not(:has(input:placeholder-shown))" data-option-value="whatsapp">
+												<div class="select-option-window p--5 m--t-15 validated-form-input form__input" data-validation-type="regex" data-validation-regex="^(?:(?:\+|0{0,2})91(\s*[\ -]\s*)?|[0]?)?[456789]\d{9}|(\d[ -]?){10}\d$" data-option-value="whatsapp">
 													<input placeholder="Whatsapp" class="input input--underscore" type="text">
+													<div class="form__input-invalid-message"><span>Введите действительный телефонный номер whatsapp</span></div>
 												</div>
-												<div class="select-option-window p--5 m--t-15 validated-form-input" data-valid-selector=".hidden, :not(:has(input:placeholder-shown))" data-option-value="telegram">
+												<div class="select-option-window p--5 m--t-15 validated-form-input form__input" data-validation-type="regex" data-validation-regex=".*\B(?=\w{5,32}\b)[a-zA-Z0-9]+(?:_[a-zA-Z0-9]+)*.*" data-option-value="telegram">
 													<input placeholder="Телеграм" class="input input--underscore" type="text">
+													<div class="form__input-invalid-message"><span>Введите действительное имя пользователя</span></div>
 												</div>
-												<div class="select-option-window p--5 m--t-15 validated-form-input" data-valid-selector=".hidden, :not(:has(input:placeholder-shown))" data-option-value="email">
-													<input placeholder="Email" class="input input--underscore" type="email">
+												<div class="select-option-window p--5 m--t-15 validated-form-input form__input" data-validation-type="regex" data-validation-regex="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" data-option-value="email">
+													<input placeholder="Email" class="input input--underscore" type="text">
+													<div class="form__input-invalid-message"><span>Введите действительный Email</span></div>
 												</div>
 											</div>
 										</div>
 									</div>
 									<div class="fx p--5 md-fx-d--c">
-										<div class="fx fx-ai--c md-m--b-25">
-											<div class="validated-form-input" data-valid-selector=":has(input:checked)">
+										<div class="fx fx-ai--c md-m--b-25 validated-form-input form__input m--r-35 sm-m--r-0" data-validation-type="css-selector" data-validation-selector=":has(input:checked)">
+											<div class="">
 												<input type="checkbox" class="m--r-15">
+												
 											</div>
-											<div class="text--gray text--400 text--XS m--r-35 sm-m--r-0">
+											<div class="text--gray text--400 text--XS">
 												<span>Я согласен с условиями использования банком моих персональных данных для обработки данного обращения</span>
+											</div>
+											<div class="form__input-invalid-message form__input-invalid-message--top-right">
+												<span>*</span>
 											</div>
 										</div>
 										<div class="fx fx-jc--c fx-ai--c">
-											<button class="btn">Отправить</button>
+											<button class="btn" type="submit">Отправить</button>
 										</div>
 									</div>
 								</form>
