--- a/src/html/inc/header.html
+++ b/src/html/inc/header.html
@@ -100,9 +100,9 @@
 					</div>
 					<div class="header-menu__search text--white">
 						<input class="input input--underscore" type="text" placeholder="Поиск">
-						<a class="header-menu__search-icon" href="">
+						<div class="header-menu__search-icon" href="">
 							<img src="../assets/img/svg/search.svg" alt="">
-						</a>
+						</div>
 					</div>
 					<!-- </div> -->
 					<!-- <div class="header-menu__bottom-bar"> -->
