--- a/src/html/news.html
+++ b/src/html/news.html
@@ -16,6 +16,16 @@
 			</div>
 			<div class="page">
 				<div class="page__content basic-page">
+					<form class="text--blue search">
+						<div class="search__text">Поиск:</div>
+						<div class="search__row">
+							<input class="input" type="text" placeholder="Поиск" name="q">
+							<button class="search__search-icon" type="submit" name="s">
+								<img src="../assets/img/svg/search-dark.svg" alt="search">
+							</button>	
+						</div>
+						
+					</form>
 					<div class="default-card news-card fx xsm-fx-d--c m--b-45 fx-g--15 fx-ai--c">
 						<div class="news-card__image ibg ibg--cover fx-el--33 fx-el--s0 bdrs--5 ratio-w" data-ratio-multiplier="1">
 							<img src="../assets/img/images/comfortable.jpg" alt="">
