--- a/src/html/deposits.html
+++ b/src/html/deposits.html
@@ -195,14 +195,14 @@
 								</span>
 							</p>
 						</div>
-						<div class="deposite-kinds__comtainer" id="amount">
+						<!-- <div class="deposite-kinds__comtainer" id="amount">
 							<p class="deposite-kinds__text">
 								Сумма дохода
 								<span class="deposite-kinds__text-second">
 									9 100 ₽
 								</span>
 							</p>
-						</div>
+						</div> -->
 					</div>
 					<div class="deposite-kinds__content filtered-item" data-item-filter-data='
 					{
