--- a/src/html/distance-services.html
+++ b/src/html/distance-services.html
@@ -77,8 +77,8 @@
 					<div class="distance-services__mobile">
 						<div class="mobile__item">
 							<div class="mobile-choice">
-								<button type="button" class="mobile__button">AppStore</button>
-								<button type="button" class="mobile__button">GooglePlay</button>
+								<a target="_blank" href="/" type="button" class="mobile__button">AppStore</a>
+								<a target="_blank" href="/" type="button" class="mobile__button">GooglePlay</a>
 							</div>
 							<h5 class="mobile__title">
 								Мобильный банк
